# sakar_bot_ws

./: .gitattributes  .gitignore  README.md
src/my_doosan_pkg/description/meshes/a0912_blue/: A0912_0_0.dae  A0912_1_0.dae  A0912_1_1.dae  A0912_1_2.dae  A0912_2_0.dae  A0912_2_1.dae  A0912_2_2.dae  A0912_3_0.dae  A0912_3_1.dae  A0912_4_0.dae  A0912_4_1.dae  A0912_5_0.dae  A0912_5_1.dae  A0912_6_0.dae
src/my_doosan_pkg/description/meshes/m1013_white/: MF1013_0_0.dae
src/my_doosan_pkg/description/urdf/: a0912.blue.urdf
src/my_doosan_pkg/description/xacro/: a0912.urdf.xacro  macro.a0912.blue.xacro
src/my_doosan_pkg/launch/: doosan_controllers.launch.py
src/sakar_bot/: CMakeLists.txt  package.xml
src/sakar_bot/config/: nav2_params.yaml
src/sakar_bot/launch/: gazebo.launch.py  mission_planner.launch.py  navigation.launch.py  rtab_map.launch.py
src/sakar_bot/missions/: mission_planner.cpp
src/sakar_bot/models/: box.sdf
src/sakar_bot/rviz/: rviz_config_file.rviz
src/sakar_bot/urdf/: camera.xacro  common_properties.xacro  macros.xacro  materials.xacro  mobile_base.xacro  moblie_base_gazebo.xacro  robot.urdf.xacro  sakar.urdf.xacro
src/sakar_bot/world/: warehouse.world
